[package]
name = "event_system_macros"
version = "0.1.0"
edition = "2021"
description = "Macros for event_system."
license = "MIT"

[dependencies]
syn = { version = "1.0.98", features = ["full", "fold", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0.40"
convert_case = { version = "0.6.0" }

[lib]
proc-macro = true

